# afl-result-predictor

./: LICENSE  README.md  afl_model.json  config.py  data_loader.py  database.py  feature_columns.txt  feature_engineering.py  imputer.pkl  main.py  predict.py  pyproject.toml  train.py  x_train.csv
.github/workflows/: predictions.yml
ml/: feature_engineering.py  predict.py  train.py
services/: data_loader.py  email_service.py  squiggle_api.py
utils/: config.py  logger.py
